--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav>
             <!--nav header-->
             <div class="nav-header">
-                <h3>Phanita's <span>Baby Club</span></h3>
+                <img class="logo" src="./img/logo.jpg">
                 <button type="button" class="toggleBtn">
                     <i class="fa-solid fa-bars"></i>
                 </button>
@@ -56,7 +56,6 @@
                             <a href="tel:+35799578375">CALL US</a>
                         </li>
                     </ul>
-
                 </aside>
             </div>
 
@@ -72,7 +71,7 @@
                 <h2>Looking for a second place so your child feels like at home?</h2>
                 <h3>Our Baby club offers all the safety and tenderness your child can find at home</h3>
                 <p>OPEN MONDAY-FRIDAY</p>
-                <P>6.30AM - 5.00PM</P>
+                <P>6.45AM - 5.00PM</P>
                 <a class="phone" href="tel:+35799578375">
                     <button class="hero-cta">Talk to Us Today</button>
                 </a>
@@ -88,7 +87,8 @@
     <!--Who We Are-->
     <section class="about-us">
         <div class="content-wrapper">
-            <div class="about-us-text">
+            <img class="long-logo" src="./img/long-log.jpg">
+            <div class="about-us-card">
                 <h2>About Us</h2>
                 <h3>“Aiming to create complete people with strong personalities.
                     And above all <span>LOVE, RESPECT, DEDICATION</span> to each child.”</h3>
@@ -110,46 +110,84 @@
         </div>
     </section>
 
-    <!--Who We Are-->
+    <!--Goals-->
     <section class="our-goals">
         <div class="content-wrapper">
-            <div class="goals">
-                <div class="principles">
-                    <h3>Our Basic Principles :</h3>
-                    <ul>
-                        <li>I work in a team</li>
-                        <li>Each child has their own uniqueness and individuality.</li>
-                        <li>The educational program is based on all the interdisciplinary modules of early childhood
-                            education and care, in accordance with education in Cyprus.</li>
-                    </ul>
+            <h2>Why Us</h2>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/play-dough.jpg">
+                    </div>
+                    <div class="card-text">
+                        <h3>Our Basic Principles</h3>
+                        <ul>
+                            <li>I work in a team</li>
+                            <li>Each child has their own uniqueness and individuality.</li>
+                            <li>The educational program is based on all the interdisciplinary modules of early childhood
+                                education and care, in accordance with education in Cyprus.</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="goal">
-                    <h3>Our Goal :</h3>
-                    <ul>
-                        <li>Socialization</li>
-                        <li>Mutual respect</li>
-                        <li>Cooperation</li>
-                        <li>Self-esteem</li>
-                        <li>Love for learning and creation</li>
-                        <li>HAPPY FACES…</li>
-                    </ul>
+
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/boy-building-blocks.jpg">
+                    </div>
+                    <div class="card-text">
+                        <h3>Our Goal</h3>
+                        <ul>
+                            <li>Socialization</li>
+                            <li>Mutual respect</li>
+                            <li>Cooperation</li>
+                            <li>Self-esteem</li>
+                            <li>Love for learning and creation</li>
+                            <li>HAPPY FACES…</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="care-and-education">
-                    <h3>Care and Education of Our Little Friends… :</h3>
-                    <li>Meets the needs for security, affection, love…</li>
-                    <li>Recreational activities (teamwork)</li>
-                    <li>Development of creativity of expression (mentally and skills)</li>
-                    <li>Free and creative play</li>
-                    <li>Development of initiative and independence</li>
-                    <li>Respect for everyone's cultural and religious identity</li>
-                    <li>To be able to socialize with all people (young and old)….</li>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/foot-print.jpg">
+                    </div>
+                    <div class="card-text">
+                        <h3>Care and Education of Our Little Friends</h3>
+                        <ul>
+                            <li>Meets the needs for security, affection, love…</li>
+                            <li>Recreational activities (teamwork)</li>
+                            <li>Development of creativity of expression (mentally and skills)</li>
+                            <li>Free and creative play</li>
+                            <li>Development of initiative and independence</li>
+                            <li>Respect for everyone's cultural and religious identity</li>
+                            <li>To be able to socialize with all people (young and old)….</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
     </section>
 
     <section class="departments">
         <div class="content-wrapper">
-            <h2>Our Departments/Classes</h2>
+            <h2 class="class-title">Our Classes</h2>
+            <div class="card-container">
+                <div class="class-card">
+                    <img src="./img/colin-maynard-CEEhmAGpYzE-unsplash.jpg">
+                    <h3>4 Months-2 Years</h3>
+                    <button>Learn More</button>
+                </div>
+                <div class="class-card">
+                    <img src="./img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg">
+                    <h3>2 -3 Years</h3>
+                    <button>Learn More</button>
+                </div>
+                <div class="class-card">
+                    <img src="./img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg">
+                    <h3>3-4 & 4-5 Years</h3>
+                    <p></p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -171,7 +209,7 @@
         <div class="opening-hours">
             <p>Opening Hours</p>
             <p>Monday-Friday</p>
-            <p>6.30-17.00</p>
+            <p>6.45-17.00</p>
 
         </div>
 
