Added mobile styles to classes and footer

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <section class="hero-area">
         <div class="content-wrapper">
             <div class="hero-text">
-                <h1>Welcome to Phanita's Baby Club</h1>
+                <h1 id="welcome">Welcome to Phanita's Baby Club</h1>
                 <h2>Looking for a second place so your child feels like at home?</h2>
                 <h3>Our Baby club offers all the safety and tenderness your child can find at home</h3>
                 <p>OPEN MONDAY-FRIDAY</p>
-                <P>6.45AM - 5.00PM</P>
+                <P>6.45AM - 17.00PM</P>
                 <a class="phone" href="tel:+35799578375">
                     <button class="hero-cta">Talk to Us Today</button>
                 </a>
@@ -112,79 +112,77 @@
 
     <!--Goals-->
     <section class="our-goals">
-        <div class="content-wrapper">
+        <div class="card-container">
             <h2>Why Us</h2>
-            <div class="card-container">
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/play-dough.jpg">
-                    </div>
-                    <div class="card-text">
-                        <h3>Our Basic Principles</h3>
-                        <ul>
-                            <li>I work in a team</li>
-                            <li>Each child has their own uniqueness and individuality.</li>
-                            <li>The educational program is based on all the interdisciplinary modules of early childhood
-                                education and care, in accordance with education in Cyprus.</li>
-                        </ul>
-                    </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="./img/play-dough.jpg">
                 </div>
-
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/boy-building-blocks.jpg">
-                    </div>
-                    <div class="card-text">
-                        <h3>Our Goal</h3>
-                        <ul>
-                            <li>Socialization</li>
-                            <li>Mutual respect</li>
-                            <li>Cooperation</li>
-                            <li>Self-esteem</li>
-                            <li>Love for learning and creation</li>
-                            <li>HAPPY FACES…</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/foot-print.jpg">
-                    </div>
-                    <div class="card-text">
-                        <h3>Care and Education of Our Little Friends</h3>
-                        <ul>
-                            <li>Meets the needs for security, affection, love…</li>
-                            <li>Recreational activities (teamwork)</li>
-                            <li>Development of creativity of expression (mentally and skills)</li>
-                            <li>Free and creative play</li>
-                            <li>Development of initiative and independence</li>
-                            <li>Respect for everyone's cultural and religious identity</li>
-                            <li>To be able to socialize with all people (young and old)….</li>
-                        </ul>
-                    </div>
+                <div class="card-text">
+                    <h3>Our Basic Principles</h3>
+                    <ul>
+                        <li>I work in a team</li>
+                        <li>Each child has their own uniqueness and individuality.</li>
+                        <li>The educational program is based on all the interdisciplinary modules of early childhood
+                            education and care, in accordance with education in Cyprus.</li>
+                    </ul>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="./img/boy-building-blocks.jpg">
+                </div>
+                <div class="card-text">
+                    <h3>Our Goals</h3>
+                    <ul>
+                        <li>Socialization</li>
+                        <li>Mutual respect</li>
+                        <li>Cooperation</li>
+                        <li>Self-esteem</li>
+                        <li>Love for learning and creation</li>
+                        <li>HAPPY FACES…</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="./img/foot-print.jpg">
+                </div>
+                <div class="card-text">
+                    <h3>Care and Education of Our Little Friends</h3>
+                    <ul>
+                        <li>Meets the needs for security, affection, love…</li>
+                        <li>Recreational activities (teamwork)</li>
+                        <li>Development of creativity of expression (mentally and skills)</li>
+                        <li>Free and creative play</li>
+                        <li>Development of initiative and independence</li>
+                        <li>Respect for everyone's cultural and religious identity</li>
+                        <li>To be able to socialize with all people (young and old)….</li>
+                    </ul>
+                </div>
+            </div>
+
     </section>
 
     <section class="departments">
         <div class="content-wrapper">
             <h2 class="class-title">Our Classes</h2>
-            <div class="card-container">
+            <div class="class-card-container">
                 <div class="class-card">
-                    <img src="./img/colin-maynard-CEEhmAGpYzE-unsplash.jpg">
-                    <h3>4 Months-2 Years</h3>
-                    <button>Learn More</button>
+                    <img class="class-img" src="./img/colin-maynard-CEEhmAGpYzE-unsplash.jpg">
+                    <h3>4 Months - 2 Years</h3>
+                    <button class="classBtn">Learn More</button>
                 </div>
                 <div class="class-card">
-                    <img src="./img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg">
-                    <h3>2 -3 Years</h3>
-                    <button>Learn More</button>
+                    <img class="class-img" src="./img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg">
+                    <h3>2-3 Years</h3>
+                    <button class="classBtn">Learn More</button>
                 </div>
                 <div class="class-card">
-                    <img src="./img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg">
+                    <img class="class-img" src="./img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg">
                     <h3>3-4 & 4-5 Years</h3>
-                    <p></p>
-                    <button>Learn More</button>
+                    <button class="classBtn">Learn More</button>
                 </div>
             </div>
 
@@ -193,26 +191,44 @@
 
     <!--Footer-->
     <footer class="footer">
+
+        <img class="footer-logo" src="./img/logo.jpg">
+
         <div class="contact">
-            <p>Contact Details</p>
-            <address>
-                Aristotelous 11 <br>
-                Ayios Sylas 4193,<br>
-                Ypsonas,<br>
-                Limassol</br>
-                <i class="fa-solid fa-envelope"></i>
-                <a href="mailto: phanita2008@hotmail.com"> phanita2008@hotmail.com</a><br />
-                <i class="fa-solid fa-house"></i>
-                <a href="tel:+0035799578375">(00357) 99 578 375</a>
-            </address>
+            <h5>Get in Touch</h5>
+            <ul>
+                <li><i class="fa-solid fa-location-dot icon"></i>
+                    Aristotelous 11,
+                    Ayios Sylas 4193,
+                    Ypsonas,
+                    Limassol
+                </li>
+                <li> <i class="fa-solid fa-envelope icon"></i>
+                    <a href="mailto:phanita2008@hotmail.com">phanita2008@hotmail.com</a>
+                </li>
+                <li>
+                    <i class="fa-solid fa-phone icon"></i>
+                    <a href="tel:+0035799578375">(00357) 99 578 375</a>
+                </li>
+                <li>
+                    <i class="fa-solid fa-clock icon"></i>
+                    Mon - Fri: 06:45 - 17:00
+                </li>
+            </ul>
         </div>
-        <div class="opening-hours">
-            <p>Opening Hours</p>
-            <p>Monday-Friday</p>
-            <p>6.45-17.00</p>
-
+        <div class="social">
+            <i class="fa-brands fa-facebook icon"></i>
+            <p>Follow Us</p>
         </div>
-
+        <div class="quick-links">
+            <h5>Quick Links</h5>
+            <ul>
+                <li class="footer-quick-links"><a href="#">Our School</a></li>
+                <li class="footer-quick-links"><a href="#">Gallery</a></li>
+                <li class="footer-quick-links"><a href="#">Classes and Teachers</a></li>
+                <li class="footer-quick-links"><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 
