Added desktop styles to make site more responsive

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 
     <!--Goals-->
     <section class="our-goals">
+        <h2 class="why-us-title">Why Us</h2>
         <div class="card-container">
-            <h2>Why Us</h2>
             <div class="card">
                 <div class="card-img">
                     <img src="./img/play-dough.jpg">
@@ -193,41 +193,42 @@
     <footer class="footer">
 
         <img class="footer-logo" src="./img/logo.jpg">
-
-        <div class="contact">
-            <h5>Get in Touch</h5>
-            <ul>
-                <li><i class="fa-solid fa-location-dot icon"></i>
-                    Aristotelous 11,
-                    Ayios Sylas 4193,
-                    Ypsonas,
-                    Limassol
-                </li>
-                <li> <i class="fa-solid fa-envelope icon"></i>
-                    <a href="mailto:phanita2008@hotmail.com">phanita2008@hotmail.com</a>
-                </li>
-                <li>
-                    <i class="fa-solid fa-phone icon"></i>
-                    <a href="tel:+0035799578375">(00357) 99 578 375</a>
-                </li>
-                <li>
-                    <i class="fa-solid fa-clock icon"></i>
-                    Mon - Fri: 06:45 - 17:00
-                </li>
-            </ul>
-        </div>
-        <div class="social">
-            <i class="fa-brands fa-facebook icon"></i>
-            <p>Follow Us</p>
-        </div>
-        <div class="quick-links">
-            <h5>Quick Links</h5>
-            <ul>
-                <li class="footer-quick-links"><a href="#">Our School</a></li>
-                <li class="footer-quick-links"><a href="#">Gallery</a></li>
-                <li class="footer-quick-links"><a href="#">Classes and Teachers</a></li>
-                <li class="footer-quick-links"><a href="#">Contact Us</a></li>
-            </ul>
+        <div class="footer-text">
+            <div class="contact">
+                <h5>Get in Touch</h5>
+                <ul>
+                    <li><i class="fa-solid fa-location-dot icon"></i>
+                        Aristotelous 11,
+                        Ayios Sylas 4193,
+                        Ypsonas,
+                        Limassol
+                    </li>
+                    <li> <i class="fa-solid fa-envelope icon"></i>
+                        <a href="mailto:phanita2008@hotmail.com">phanita2008@hotmail.com</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-phone icon"></i>
+                        <a href="tel:+0035799578375">(00357) 99 578 375</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-clock icon"></i>
+                        Mon - Fri: 06:45 - 17:00
+                    </li>
+                </ul>
+            </div>
+            <div class="social">
+                <i class="fa-brands fa-facebook icon"></i>
+                <p>Follow Us</p>
+            </div>
+            <div class="quick-links">
+                <h5>Quick Links</h5>
+                <ul>
+                    <li class="footer-quick-links"><a href="#">Our School</a></li>
+                    <li class="footer-quick-links"><a href="#">Gallery</a></li>
+                    <li class="footer-quick-links"><a href="#">Classes and Teachers</a></li>
+                    <li class="footer-quick-links"><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
