--- a/index.html
+++ b/index.html
@@ -154,18 +154,18 @@
             </div>
             <div class="card">
                 <div class="card-img">
-                    <img src="./img/foot-print.jpg">
+                    <img src="./img/foot-print.jpg" alt="childs footprint">
                 </div>
                 <div class="card-text">
                     <h3 data-i18n="care_h3">Care and Education of Our Little Friends</h3>
                     <ul>
-                        <li>Meets the needs for security, affection, love…</li>
-                        <li>Recreational activities (teamwork)</li>
-                        <li>Development of creativity of expression (mentally and skills)</li>
-                        <li>Free and creative play</li>
-                        <li>Development of initiative and independence</li>
-                        <li>Respect for everyone's cultural and religious identity</li>
-                        <li>To be able to socialize with all people (young and old)….</li>
+                        <li data-i18n="care_li1">Meets the needs for security, affection, love…</li>
+                        <li data-i18n="care_li2">Recreational activities (teamwork)</li>
+                        <li data-i18n="care_li3">Development of creativity of expression (mentally and skills)</li>
+                        <li data-i18n="care_li4">Free and creative play</li>
+                        <li data-i18n="care_li5">Development of initiative and independence</li>
+                        <li data-i18n="care_li6">Respect for everyone's cultural and religious identity</li>
+                        <li data-i18n="care_li7">To be able to socialize with all people (young and old)….</li>
                     </ul>
                 </div>
             </div>
@@ -202,24 +202,26 @@
         <img class="footer-logo" src="./img/logo.jpg">
         <div class="footer-text">
             <div class="contact">
-                <h5 data-i18n="get_in_touch">Get in Touch</h5>
+                <h4 data-i18n="get_in_touch">Get in Touch</h4>
                 <ul>
-                    <li><i class="fa-solid fa-location-dot icon"></i>
-                        Aristotelous 11,
-                        Ayios Sylas 4193,
-                        Ypsonas,
-                        Limassol
+                    <li class="footer-item">
+                        <i class="fa-solid fa-location-dot icon"></i>
+                        <address data-i18n="address">
+                            11 Aristotelous Street, Agios Sylas 4193, Ypsonas, Limassol
+                        </address>
                     </li>
-                    <li> <i class="fa-solid fa-envelope icon"></i>
-                        <a href="mailto:phanita2008@hotmail.com">phanita2008@hotmail.com</a>
+                    <li>
+                        <i class="fa-solid fa-envelope icon"></i>
+                        <a href="mailto:phanita2008@hotmail.com"><span
+                                data-i18n="email">phanita2008@hotmail.com</span></a>
                     </li>
                     <li>
                         <i class="fa-solid fa-phone icon"></i>
-                        <a href="tel:+0035799578375">(00357) 99 578 375</a>
+                        <a href="tel:+0035799578375" data-i18n="phone">(00357) 99 578 375</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-clock icon"></i>
-                        Mon - Fri: 06:45 - 17:00
+                        <span data-i18n="working_hours">Mon - Fri: 06:45 - 17:00</span>
                     </li>
                 </ul>
             </div>
