--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </button>
                     <ul class="links">
                         <li>
-                            <a href="#" data-i18n="home">Home</a>
+                            <a href="index.html" data-i18n="home">Home</a>
                         </li>
                         <li>
                             <a href="#" data-i18n="school">Our School</a>
@@ -50,7 +50,7 @@
                             <a href="#" data-i18n="teachers-classes">Teachers & Classes</a>
                         </li>
                         <li>
-                            <a href="#" data-i18n="contact_us">Contact Us</a>
+                            <a href="./contact/index.html" data-i18n="contact_us">Contact Us</a>
                         </li>
                         <li><a href="index.html" onclick="changeLanguage('en')" data-i18n="english">English</a></li>
                         <li><a href="index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a></li>
@@ -235,7 +235,8 @@
                     <li class="footer-quick-links"><a href="#" data-i18n="quick_school">Our School</a></li>
                     <li class="footer-quick-links"><a href="#" data-i18n="quick_gallery">Gallery</a></li>
                     <li class="footer-quick-links"><a href="#" data-i18n="quick_classes">Classes and Teachers</a></li>
-                    <li class="footer-quick-links"><a href="#" data-i18n="quick_contact">Contact Us</a></li>
+                    <li class="footer-quick-links"><a href="./contact/index.html" data-i18n="quick_contact">Contact
+                            Us</a></li>
                 </ul>
             </div>
         </div>
