--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/8e3a662c3c.js" crossorigin="anonymous"></script>
     <!--Scripts-->
     <script src="./script.js" defer></script>
-    <title>Phanitas Baby Club</title>
+    <title>Phanita's Baby Club</title>
 </head>
 
 <body>
@@ -69,12 +69,19 @@
     <section class="hero-area">
         <div class="content-wrapper">
             <div class="hero-text">
-                <h1 id="welcome" data-i18n="welcome_message">Welcome to Phanitas Baby Club</h1>
+                <h1 id="welcome" data-i18n="welcome_message">Welcome to Phanita's Baby Club</h1>
                 <h2 data-i18n="hero_txt1">Looking for a second place so your child feels like at home?</h2>
                 <h3 data-i18n="hero_txt2">Our Baby club offers all the safety and tenderness your child can find at home
                 </h3>
                 <p data-i18n="hero_p1">OPEN MONDAY-FRIDAY</p>
                 <P data-i18n="hero_p2">6.45AM - 17.00PM</P>
+                <a class="phone-number" href="tel:+0035799578375" data-i18n="phone">(00357) 99 578 375</a>
+                <address class="address" data-i18n="address">
+                    11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol
+                </address>
+                <a class="email" href="mailto:phanita2008@hotmail.com">
+                    <span data-i18n="email">phanita2008@hotmail.com</span>
+                </a><br>
                 <a class="phone" href="tel:+35799578375">
                     <button class="hero-cta" data-i18n="hero_cta_text">Talk to Us Today</button>
                 </a>
@@ -85,8 +92,6 @@
             </div>
         </div>
     </section>
-
-
 
     <!--Who We Are-->
     <section class="about-us">
@@ -199,15 +204,15 @@
 
     <!--Footer-->
     <footer class="footer">
-        <img class="footer-logo" src="./img/logo.jpg">
+        <img class="footer-logo" src="./img/logo.jpg" alt="logo">
         <div class="footer-text">
             <div class="contact">
                 <h4 data-i18n="get_in_touch">Get in Touch</h4>
                 <ul>
                     <li class="footer-item">
                         <i class="fa-solid fa-location-dot icon"></i>
-                        <address data-i18n="address">
-                            11 Aristotelous Street, Agios Sylas 4193, Ypsonas, Limassol
+                        <address class="address" data-i18n="address">
+                            11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol.
                         </address>
                     </li>
                     <li>
@@ -239,6 +244,9 @@
                             Us</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="copy-right">
+            <div>Copyright © <span id="spanYear"></span> Phanita's Baby Club. All rights reserved.</div>
         </div>
     </footer>
 </body>
